# mml-math

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  Makefile  README.md  mml-math-config.cmake.in
calculator/: Makefile  README.md  logging.cpp  logging.hpp  main.cpp
docs/doxygen/: doxygen.conf
docs/doxygen/xml/: README_8md.xml  Thread_8cpp.xml  Thread_8hpp.xml  Timer_8cpp.xml  Timer_8hpp.xml  Unix_8cpp.xml  Unix_8hpp.xml  User_8cpp.xml  arg_8cpp.xml  basic__operations_8cpp.xml  basic__operations_8hpp.xml  calc_8cpp.xml  calculator_2README_8md.xml  classmml_1_1Timer.xml  classmml_1_1log.xml  classmml_1_1math_1_1shunting__yard__algorithm.xml  classmml_1_1matrix_1_1matrix.xml  classmml_1_1shell_1_1arg.xml  classmml_1_1string.xml  classmml_1_1thread_1_1Thread.xml  classmml_1_1vector.xml  conf_8py.xml  constants_8hpp.xml  definitions_8hpp.xml  derivate_8cpp.xml  derivate_8hpp.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_1ab31cb45db5038bdda41b72d8600e0e.xml  dir_46ec98a0eaec3dba456c3e63c7772753.xml  dir_49e56c817e5e54854c35e136979f97ca.xml  dir_4df3cc2f4cbcc224b52c93ff08d975ae.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_b3565b2f926c3c7337ec426a161a271f.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  file_8cpp.xml  file_8hpp.xml  functions_8cpp.xml  functions_8hpp.xml  help_8cpp.xml  help_8hpp.xml  (+42 more)
docs/source/: conf.py
include/: mml-math.hpp
include/mml-math/: basic_operations.hpp  constants.hpp  derivate.hpp  functions.hpp  logging.hpp  matrix.hpp  matrix1.hpp  polyfit.hpp  shunting_yard_algorithm.hpp
src/: basic_operations.cpp  derivate.cpp  functions.cpp  logging.cpp  matrix.cpp  matrix1.cpp  shunting_yard_algorithm.cpp
test/: calc.cpp  makefile  matrix.cpp  sh-ya-algo.cpp  test1.cpp  test_calc.cpp  test_fit.cpp  test_matrix.cpp  test_sh-ya-algo.cpp
